fix: add MS SQL

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=store.db"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=store;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
